data/derived/comb/progs/unify/prog3522.ml.out
Characters 189-193:
  let (bar, res) = List.fold_left f base args in
                                    ^^^^
Error: This expression has type 'a list * 'b list
       but an expression was expected of type int * int
       Type 'a list is not compatible with type int 
